tests/type-errors/expr_cmp_eq_map.arl
archetype expr_cmp_eq_map

entry exec () {
  var a : map<int, string> = [(1, "1"); (2, "2"); (3, "3")];
  var b : map<int, string> = [(1, "1"); (2, "2"); (3, "3")];
  dorequire (a = b);
}
